# sandbox

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
cmd/sandbox/: Cargo.toml
cmd/sandbox-mcp/: Cargo.toml
cmd/sandbox-mcp/src/: main.rs
cmd/sandbox/src/: local_http.rs  main.rs
cmd/sandboxd/: Cargo.toml
cmd/sandboxd/src/: controller.rs  main.rs  worker.rs
cmd/sandboxd/src/controller/: local_relay.rs
config/: sandbox.example.toml
crates/aegis/: Cargo.toml
crates/aegis/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  api.rs  config.rs  error.rs  id.rs  lib.rs  model.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: docker.rs  external.rs  lib.rs  tunnel.rs
crates/storage/: Cargo.toml
crates/storage/migrations/00000000000000_init/: down.sql  up.sql
crates/storage/src/: lib.rs  memory.rs  postgres.rs
deploy/caddy/: Caddyfile.cloudflare-http.example  Caddyfile.cloudflare-origin.example  Caddyfile.example
deploy/compose/: compose.caddy.yaml  compose.cloudflare-http.yaml  compose.cloudflare-origin.yaml  compose.cloudflare.yaml  compose.yaml
deploy/systemd/: sandboxd-controller.service  sandboxd-worker.service
docs/: README.md  aegis.md  agents.md  api.md  architecture.md  cli.md  configuration.md  deployment.md  development.md  mcp.md  operations.md  roadmap.md  runtime-driver.md  security.md  tunnels.md
docs/how-to-setup/: client.md  custom-public-domains.md  server.md
images/agents/: Dockerfile  versions.env
scripts/: build-agent-image.sh  install.sh  smoke-test-cli.sh
skills/sandbox-platform/: SKILL.md
skills/sandbox-platform/agents/: openai.yaml
skills/sandbox-platform/references/: cli.md  mcp.md  operations.md  public-domains.md  safety.md
tests/fixtures/: fake-runtime-driver.sh
