[package]
name = "sandbox-mcp"
description = "MCP stdio server exposing typed Sandbox tools to coding agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sandbox-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sandbox-client.workspace = true
sandbox-core.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
