[package]
name = "sandbox-cli"
description = "Fast operator and coding-agent CLI for Sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
rustls.workspace = true
sandbox-client.workspace = true
sandbox-core.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
