[package]
name = "sandbox-aegis"
description = "AEGIS risk-adaptive isolation and placement engine for Sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
sandbox-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
