[package]
name = "sandbox-client"
description = "Typed HTTP client for Sandbox operators, agents, nodes, and MCP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
sandbox-core.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
