[package]
name = "sandbox-runtime"
description = "Hardened Docker and external microVM runtime adapters for Sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
