[package]
name = "sandbox-storage"
description = "Diesel/PostgreSQL and in-memory state stores for Sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
openssl-sys.workspace = true
pq-sys.workspace = true
sandbox-core.workspace = true
secrecy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
